# src/main/kotlin/es/atrujillo/sample/funwalletms/infraestructure/adapters/mapper/TransactionMapper.kt
@@ -1,6 +1,8 @@
 package es.atrujillo.sample.funwalletms.infraestructure.adapters.mapper
 
+import es.atrujillo.sample.funwalletms.domain.model.Deposit
 import es.atrujillo.sample.funwalletms.domain.model.Transaction
+import es.atrujillo.sample.funwalletms.model.CreateDepositRequest
 import es.atrujillo.sample.funwalletms.model.CreateTransactionRequest
 import es.atrujillo.sample.funwalletms.model.CreateTransactionResponse
 import org.mapstruct.Mapper
@@ -10,7 +12,12 @@ import org.mapstruct.Mapping
 interface TransactionMapper {
 
     @Mapping(target = "id", expression = "java(null)")
-    fun createTransactionRequestToDomain(request: CreateTransactionRequest): Transaction
+    @Mapping(target = "accountId", source = "accountId")
+    @Mapping(target = "amount", source = "request.amount")
+    @Mapping(target = "type", source = "request.type")
+    @Mapping(target = "from", source = "request.from")
+    @Mapping(target = "to", source = "request.to")
+    fun createTransactionRequestToDomain(accountId: String, request: CreateTransactionRequest): Transaction
 
     @Mapping(target = "data.id", source = "id")
     @Mapping(target = "data.type", source = "type")
@@ -21,5 +28,8 @@ interface TransactionMapper {
     @Mapping(target = "metadata", expression = "java(MapperMockUtility.Companion.metadataMockCreator())")
     fun domainToCreateTransactionResponse(transaction: Transaction): CreateTransactionResponse
 
+    @Mapping(target = "accountId", source = "accountId")
+    @Mapping(target = "amount", source = "request.amount")
+    fun createDepositRequestToDomain(accountId: String, request: CreateDepositRequest): Deposit
 
 }
